test/1.2/errors/T_EAMETH.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

/// WARNING WEXPERIMENTAL
trait a {
    /// ERROR EAMETH
    method m();
}

/// WARNING WEXPERIMENTAL
trait b {
    is a;
    /// ERROR EAMETH
    method m();
}
